--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "三日月国 拡張ツール",
-  "version": "1.0",
-  "description": "三日月国を便利にします",
+  "name": "三日月国・瓜科国 拡張ツール",
+  "version": "2.0",
+  "description": "三日月国と瓜科国を便利にします",
   "browser_action": {
       "default_icon": {
           "16": "images/moon16.png",
@@ -18,7 +18,7 @@
   },
   "permissions": ["activeTab"],
   "content_scripts": [{
-    "matches": ["http://www.moonpupa.jp/*"],
+    "matches": ["http://www.moonpupa.jp/*", "http://melon-cirrus.sakura.ne.jp/*"],
     "js": ["jquery-3.4.1.min.js", "jquery.easydrag.js", "contentScript.js"]
   }],
   "manifest_version": 2
